Fixed text alignment

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -70,7 +70,7 @@
   }
 
   .BlurbBegin {
-    margin-top: $margin * 0.1;
+    margin-top: $margin * 0.2;
     margin-right: $margin;
     animation: fadeIn 0.5s $timing-func-1 1.5s forwards,
       textSlideY 0.5s $timing-func-1 1.5s forwards,
